--- a/Style_sheet.css
+++ b/Style_sheet.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
+
+
 :root {
     --SideNav_Toggle_BtnColor: #ED2331;
     --MainNav_Bg_Color:#2D2D2D;
@@ -9,7 +11,8 @@
 
 body {
     display: flex;
-    height: 100vh;
+    flex-direction: column;
+    height: 200vh;
     background-color: snow;
     margin:0;
 
@@ -23,7 +26,7 @@ body {
 
 
  #Navigator{
-    height: 50%;
+    height: 70%;
     display: inline-flex;
     align-items: center;
     font-size: 26px;
@@ -34,6 +37,8 @@ body {
     
 
 }
+
+
 
 #Navigator ul {
    
@@ -51,7 +56,7 @@ body {
     
     
    }
-
+  
    #Navigator ul li a{
        color:var(--LetterColor);
        text-decoration: none;
@@ -80,22 +85,77 @@ body {
         width: 100%;
         border-style: solid;
         border-width: 0px;
-        
-       
-    
     }
     
 
 
+#Slideshow{
+  user-select: none;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  cursor: grab;
+  
+  
+}
 
+
+.img{
+  width: 100%;
+  height: 100%;
+}
+
+.hidden{
+  display: none;
+
+}
+
+
+.slideshow-indicator-positioner{
+  display: flex;
+  justify-content: center;
+  height: 0;
+  width: 100%;
+
+}
+
+.slideshow-indicator{
+  position: relative;
+  bottom:4rem;
+  background: #5f5f5f3a;
+  width: 10rem;
+  height: 3rem;
+  border-radius: 100px;
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+.slideshow-indicator-position{
+  cursor: pointer;
+  border:0;
+  background:#5f5f5faf;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 100% ;
+}
+
+.current{
+  background: rgba(255, 250, 250, 0.600);
+}
 
 #MainNav{
-    
+    z-index: 0;
     display: flex;
     width: 100%;
-    height: 10%;
+    height: 10vh;
     background: var(--MainNav_Bg_Color);
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.527) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
  /* BUTTON FOR SIDENAV*/
@@ -137,7 +197,6 @@ body {
     transition: background-color 0.2s ease-out;
   }
   .open .line:nth-child(1) {
-    -webkit-animation: jump-1 0.9s forwards ease;
             animation: jump-1 0.9s forwards ease;
   }
   .open .line:nth-child(1):after {
@@ -170,6 +229,7 @@ body {
             animation: jump-3 0.9s reverse ease-out;
   }
   
+/* KEYFRAMES DO BUTAO DA SIDENAV */
 
   
   @keyframes line-1 {
@@ -248,5 +308,22 @@ body {
   @keyframes glow {
     50% {
       box-shadow: rgba(90, 90, 90, 0.4) 0 0 2px 2px;
+    }
+  }
+
+  /* KEYFRAMES DO BUTAO DA SIDENAV */
+
+
+  /* KEYFRAMES DO SLIDESHOW */
+
+   @keyframes move-right {
+    10% {
+      transform: translateZ(0) ;
+    }
+    80% {
+      transform: translateZ(1rem) ;
+    }
+    90%, 100% {
+      transform: translateZ(2rem) ;
     }
   }
