--- a/CSS/Style_sheet.css
+++ b/CSS/Style_sheet.css
@@ -960,7 +960,7 @@ footer li{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  overflow: hidden;
+  overflow: visible;
   
 }
 
@@ -980,7 +980,7 @@ footer li{
   flex-direction: column;
   overflow: hidden;
   align-items: flex-start;
-  word-break:break-all;
+  word-break:normal;
 
 }
 
@@ -993,13 +993,14 @@ footer li{
   overflow: hidden;
   align-items:center;
   justify-content: center;
+  overflow:visible;
 
 }
 
 
 .container-for-text div:nth-child(2){
   width: 50%;
-  height: 100%;
+  height: 40rem;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -1386,8 +1387,12 @@ padding: 0;}
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
+  padding-bottom: 4rem;
 }
 
+.wide button{
+  margin: 2rem;
+}
 
 
 
@@ -1583,9 +1588,40 @@ input::-webkit-inner-spin-button {
 width: 42rem;
 }
 
-.CheckoutCard ul li{
-  list-style: none;
+.CheckoutCard button{
+  background: none;
+  outline: none;
+  border:none;
+  border-radius: 100%;
+  font-size: 35px;
   
+
+}
+
+.CheckoutCard button:active{
+  color: #c50808;
+}
+
+.CheckoutCard button{
+  background: none;
+  outline: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  
+
+}
+
+.CheckoutCard .quantity{
+  margin-inline:1rem;
+  line-height: 3rem;
+  
+}
+
+.CheckoutCard ul li{
+  list-style: none;  
 }
 
 .Cart-Item>*{
@@ -1594,7 +1630,6 @@ width: 42rem;
 }
 
 .Cart-Item{
- 
   display: flex;
   justify-content: space-between;
   height: 12rem;
@@ -1609,7 +1644,16 @@ width: 42rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-end;
   
+}
+
+.Trash-and-Price h6{
+text-align: right;
+}
+
+.Trash-and-Price h6:nth-child(1){
+  align-self:flex-end;
 }
 
 .Spacer{
@@ -1620,4 +1664,11 @@ width: 42rem;
 
 .info-Item{
   width: fit-content;
+}
+
+footer a{ color: snow;}
+
+.card a{
+  color: snow;
+  text-decoration: none;
 }
